--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site settings
 title: Zachary S. Weiss
-email: zweiss@brandeis.edu
+email: info@zacharyshaleweiss.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+url: "http://zacharyshaleweiss.com" # the base hostname & protocol for your site
+twitter_username: iliketurtles101
 github_username:  ZachsHacks
 
 # Build settings
