--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,15 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
+url: http://zacharyshaleweiss.com
+title: ZSWPortfolio
+email: zweiss@brandeis.edu
+author: Zachary Shale Weiss
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
   description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+copyright: 'Copyright &copy; 2015 Zachary S. Weiss. All Rights Reserved.'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -27,8 +26,8 @@ permalink: pretty
 
 social:
 
-  - title: email
-    icon: envelope-o
+  - icon: envelope-o
+    title: envelope-o
     url: mailto:zweiss@brandeis.edu
   - title: linkedin
     url: https://www.linkedin.com/in/zacharyshaleweiss
