--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://zacharyshaleweiss.com
-title: ZSWPortfolio
+title: ZSW
 email: zweiss@brandeis.edu
 author: Zachary Shale Weiss
 description: > # "Write an awesome description for your new site here. 
